THRIFT-1577 Compile thrift with php module for php 5.4.0 failed. need to replace function_entry with zend_function_entry Patch: Matrix Ji

git-svn-id: https://svn.apache.org/repos/asf/thrift/trunk@1327152 13f79535-47bb-0310-9956-ffa450edef68